Edits: - Banks changes incorporated - Rotation axis figure created - Registreed TSA implant in multiple views created - References to figures throughout the paper

--- a/Jensen_Shape_Sensitivity.tex
+++ b/Jensen_Shape_Sensitivity.tex
@@ -14,11 +14,13 @@
 \usepackage{tabularx}
 \usepackage{mlmodern}
 \usepackage{mdframed}
+\usepackage{setspace}
 \biboptions{sort&compress}
 
 
 \journal{Computers in Biology and Medicine}
 \begin{document}
+\setstretch{2.5}
 \linenumbers
 
 \begin{frontmatter}
@@ -35,33 +37,19 @@
 	\begin{keyword}
 		Computer vision \sep TKA \sep rTSA \sep Shape Descriptor \sep Angular Radial Transform
 	\end{keyword}
-  \end{frontmatter}
+\end{frontmatter}
 
-  \begin{mdframed}
+\begin{mdframed}
 	\textcolor{red}{
-	  {\Large TODO} {\footnotesize (I left you some room to write as well)}
-	\begin{itemize}
-	  \item Figures ({\footnotesize please add more if you think we need them, I left you some room })
-			\begin{itemize}
-			  \item Figure showing different rTSA implant/fluoro views
-			  \item Figure showing each of the rotation axes
-			  \item
-			  \item
-			\end{itemize}
-	  \item Verify that there are enough citations and justifications for last two discussion paragraphs
-	  \item Last grammar run through (Academic passive, no first person, no jarring sentences)
-			\begin{itemize}
-			  \item Academic passive voice
-			  \item No first person
-			  \item No Jarring sentences
-			\end{itemize}
-	  \item \\
-	  \item \\
-	  \item \\
-	  \item \\
-	\end{itemize}
+		{\Large TODO} {\footnotesize (I left you some room to write as well)}
+		\begin{itemize}
+			\item Figures ({\footnotesize please add more if you think we need them, I left you some room })
+			      \begin{itemize}
+				      \item Figure showing each of the rotation axes
+			      \end{itemize}
+		\end{itemize}
 	}
-  \end{mdframed}
+\end{mdframed}
 
 
 \input{src/2_intro.tex}
