--- a/src/3_methods.tex
+++ b/src/3_methods.tex
@@ -1,12 +1,12 @@
 \section{Methods}
 
 \subsection{Data Collection}
-For shape sensitivity analysis, representative 3D models of reverse total shoulder arthroplasty (rTSA) humeral and glenosphere implants, as well as total knee arthroplasty (TKA) femoral and tibial implants, were obtained from a manufacturer.
+For shape sensitivity analysis, representative 3D models of rTSA humeral and glenosphere implants, as well as TKA femoral and tibial implants, were obtained from a manufacturer.
 The study focused on a single size for each implant type, as the scale of the shapes was normalized using an Invariant Shape Descriptor, rendering multiple sizes unnecessary for this analysis.
 \subsection{Image Generation}
 Each implant's binary silhouette was rendered to a $1024\times 1024$ image plane using an in-house CUDA camera model (CUDA Version 12.1) \cite{nickollsScalableParallelProgramming2008}.
-The model featured a 1000mm focal length and 0.3mm per pixel resolution.
-All programming tasks utilized an NVIDIA Quadro P2200 GPU.
+The model featured a 1000mm focal length and 0.3mm per pixel resolution, which are quite typical projection parameters for fluoroscopic images.
+All imaging tasks utilized an NVIDIA Quadro P2200 GPU.
 \subsection{Invariant Angular Radial Transform}
 The Invariant Angular Radial Transform Descriptor (IARTD) was selected for its radial direction sensitivity, enabling the detection of subtle contour changes in projected shapes \cite{leeNewShapeDescription2012}.
 This sensitivity allows us to address minor changes along the contour of the projected shape, which is a desirable property for determining the minor changes in shape with respect to input orientation.
@@ -71,8 +71,15 @@ If more than 3 rotations are applied successively, the full rotation sequence wi
 Similarly, the application of the IARTD equation to an implant at a specific input orientation $R_{z,x,y}$ is denoted as $IARTD(R_{z,x,y})$.
 Shape differences were calculated using the central difference equation on the IARTD vector produced from two different orientations.
 The grid of sampled orientations had extrema of $\pm 30^{\circ}$ with a step size of $5^{\circ}$ for each of the $x$, $y$, and $z$ axes.
-The ``differences'' along each axis were computed using a positive and negative rotation ($\pm \delta $) of 1 degree.
+The ``differences'' along each axis were computed using a positive and negative rotation ($\pm \delta $) of 1 degree .
 Therefore, for every set of $x,y,z$ rotations, three distinct shape differences are computed, one each for $\delta_{x}$, $\delta_{y}$, and $\delta_{z}$ (\cref{eq:shape-derivative}).
+
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.5\textwidth]{~/figures/raster/rTSA_humeral_rotation_axes.png}
+  \caption{A generic manufacturer-provided humeral implant with label x, y, and z rotation axis. Additionally, each of the ,$\delta_x$,$\delta_y$, and $\delta_z$ are shown, corresponding to the rotational directions of each shape descriptor difference.}
+  \label{fig:rot-axis}
+\end{figure}
 
 For notational brevity, we will condense the total equation to a single $\Delta S(\delta)$, (representing $\Delta Shape$ for a differential rotation $\delta$).
 
@@ -85,23 +92,14 @@ For notational brevity, we will condense the total equation to a single $\Delta 
 	\end{split}
 \end{equation}
 
-\begin{mdframed}
-  \textcolor{red}{Is this approximation averaged over separate unit
-perturbations in each DoF(1), or is each axis tweaked
-simultaneously so there are only two IARTDs to diff (2)? \\
-This is the (1) option.
-I tried to emphasize this further in the above section by describing $>3$ rotations using a successive notation. I also tried to emphasize that this was for each $\delta_{x,y,z}$ in the equation itself.
-}
-\end{mdframed}
-
-The disparate scales of IARTD vector elements necessitate their standardization, ensuring a balanced assessment of global behavior without overemphasis on any individual element.
-Z-scaling provides a practical approach to standardizing each element relative to its distribution.
+The disparate scales of IARTD vector elements necessitate their normalization, ensuring a balanced assessment of global behavior without overemphasis on any individual element.
+Z-scaling provides a practical approach to normalizing each element relative to its distribution.
 After z-scaling, the Euclidean norm of each $S(\delta)_{z,x,y}$ is calculated to quantify the total shape change for a specific differential rotation (\cref{eq:euc_norm}).
 
 The final step takes advantage of two factors: first, that the in-plane rotations are the first in the Euler sequence ($z$-axis), and second, that this type of rotation does not affect the in-plane shape.
 For each $x$ and $y$ input rotation, an average is computed from values where $x$ and $y$ remain constant while $z$ varies (\cref{eq:z_rot_norm}). The final values are obtained from this equation, denoted by $\mathbb{S}$.
-Individual plots will be created for $\mathbb{S}_{x,y}$, corresponding to each differential rotation in $x$, $y$, and $z$, and for each of the four implant types.
-An analysis of these plots will be conducted to assess the performance of JTML optimization and to explore areas where optimization faces significant challenges.
+Individual plots were created for $\mathbb{S}_{x,y}$, corresponding to each differential rotation in $x$, $y$, and $z$, and for each of the four implant types.
+An analysis of these plots were conducted to assess the performance of JTML optimization and to explore areas where low shape-sensitivity will pose significant challenges for registration-based optimization.
 
 \begin{equation}
 	\label{eq:euc_norm}
