--- a/src/5_discussion.tex
+++ b/src/5_discussion.tex
@@ -27,11 +27,11 @@ This limitation motivates either a restructuring of the current optimization met
 
 
 Historical manual registration software heavily relied on bony landmarks within images to disambiguate challenging implant poses.
-As landmarks, the tibial tuberosity, fibula, and bicepital groove were vital in identifying the specific orientation of implants, all of which are visible and utilized by the user in a manual registration setting (\cref{fig:TSA-multiview}).
+As landmarks, the tibial tuberosity, fibula, and bicipital groove were vital in identifying the specific orientation of implants, all of which are visible and utilized by the user in a manual registration setting (\cref{fig:TSA-multiview}).
 To accurately assess implant kinematics in highly symmetric unicompartmental knee arthroplasty, surface meshes of femoral and tibial components were incorporated into the registration process \cite{banksComparingVivoKinematics2005}.
 These bone models were particularly beneficial in addressing implants' internal/external rotation along semi-symmetric axes.
 Additionally, the use of densely selected keypoints in the precise measurement of preoperative shoulder kinematics through biplane fluoroscopy has been documented \cite{burtonFullyAutomaticTracking2023}, with keypoint registration achieved via a modified Perspective-N-Points optimization routine.
-Furthermore, intensity-based metrics have played a crucial role in the accurate determination of non-operative tibiofemoral kinematics \cite{bakaStatisticalShapeModelBased2012}.
+Furthermore, intensity-based metrics have played a crucial role in the accurate determination of healthy tibiofemoral kinematics \cite{bakaStatisticalShapeModelBased2012}.
 Rather than minimizing the Euclidean distance of projected model keypoints, these methods leverage digitally reconstructed radiographs and directly compare the intensity values of the x-ray image and the projection estimate.
 Thus, utilizing bony landmarks for measuring implant kinematics presents a robust and reliable approach to measuring accurate joint kinematics in clinical environments.
 
