Getting everything sorted for actual submission: - Created single .bib file for this project - Moved all images into this directory - removed external references that would not compile on a different system

--- a/Jensen_Shape_Sensitivity.tex
+++ b/Jensen_Shape_Sensitivity.tex
@@ -26,27 +26,35 @@
 \begin{frontmatter}
 	\title{3D/2D Projected Shape Sensitivity Analysis of Total Joint Arthroplasty Implants}
 	\author[a]{Andrew James Jensen}
+	\author[a]{Kerry E. Costello}
+	\author[b]{Catia S. Silva}
 	\author[a]{Scott A. Banks}
 	\affiliation[a]{
-		organization={Mechanical and Aerospace Engineering, University of Florida},
+		organization={Department of Mechanical and Aerospace Engineering, University of Florida},
 		city={Gainesville},
 		state={Florida},
-		country={USA}
-	}
-	\input{src/1_abstract.tex}
+		country={U.S.A.}
+	  }
+	  \affiliation[b]{
+		organization={Department of Electrical and Computer Engineering, University of Florida},
+		city={Gainesville},
+		state={Florida},
+		country={U.S.A.}
+	  }
+	\input{1_abstract.tex}
 	\begin{keyword}
 		Computer vision \sep TKA \sep rTSA \sep Shape Descriptor \sep Angular Radial Transform
 	\end{keyword}
 \end{frontmatter}
 
-\input{src/2_intro.tex}
-\input{src/3_methods.tex}
-\input{src/4_results.tex}
-\input{src/5_discussion.tex}
-\input{src/6_conclusion.tex}
+\input{2_intro.tex}
+\input{3_methods.tex}
+\input{4_results.tex}
+\input{5_discussion.tex}
+\input{6_conclusion.tex}
 
 \bibliographystyle{elsarticle-num}
-\bibliography{~/org/biblio.bib}
+\bibliography{Jensen_Shape_Sensitivity.bib}
 
 \end{document}
 %%% Local Variables:
